Deployment/postgresql-.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1 # Bir adet PostgreSQL pod'u çalıştırın
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
        type: db
    spec:
      volumes:
      - name: postgresql-pvc
        persistentVolumeClaim:
          claimName: postgresql-pvc
      containers:
        - name: postgresql
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 250Mi
          image: postgres:14-alpine
          ports:
          - containerPort: 5432
          volumeMounts:
          - name: postgresql-pvc
            mountPath: /var/lib/postgresql/data
